--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <th scope="row">1</th>
             <td>Town</td>
             <td>Athi-River</td>
-            <td>KES 900.00</td>
+            <td>KES 1000.00</td>
           </tr>
           <tr>
             <th scope="row">2</th>
@@ -77,7 +77,7 @@
              <th scope="row">3</th>
              <td >CBD</td>
              <td>Cabanas</td>
-             <td>KES 400.00</td>
+             <td>KES 500.00</td>
             </tr>
           <tr>
              <th scope="row">4</th>
@@ -89,7 +89,7 @@
             <th scope="row">5</th>
             <td>CBD</td>
             <td>Embakasi</td>
-            <td>KES 400.00</td>
+            <td>KES 500.00</td>
           </tr>
           <tr>
             <th scope="row">6</th>
@@ -113,7 +113,7 @@
             <th scope="row">9</th>
             <td>CBD</td>
             <td>Juja</td>
-            <td>KES 900.00</td>
+            <td>KES 1000.00</td>
           </tr>
           <tr>
             <th scope="row">10</th>
@@ -126,6 +126,12 @@
             <td>CBD</td>
             <td>Kitengela</td>
             <td>KES 1200.00</td>
+          </tr>
+            <tr>
+            <th scope="row">12</th>
+            <td>CBD</td>
+            <td>Langata</td>
+            <td>KES 300.00</td>
           </tr>
           <tr>
             <th scope="row">12</th>
@@ -167,7 +173,7 @@
             <th scope="row">18</th>
             <td>CBD</td>
             <td>Lower Kabete</td>
-            <td>KES 400.00</td>
+            <td>KES 500.00</td>
           </tr>
           <tr>
             <th scope="row">19</th>
@@ -215,7 +221,7 @@
             <th scope="row">26</th>
             <td>CBD</td>
             <td>Waiyaki Way-Uthiru</td>
-            <td>KES 400.00</td>
+            <td>KES 500.00</td>
           </tr>
           <tr>
             <th scope="row">27</th>
@@ -233,13 +239,13 @@
             <th scope="row">29</th>
             <td>CBD</td>
             <td>Njiru</td>
-            <td>KES 700.00</td>
+            <td>KES 800.00</td>
           </tr>
           <tr>
             <th scope="row">30</th>
             <td>CBD</td>
             <td>Ngara</td>
-            <td>KES 200.00</td>
+            <td>KES 250.00</td>
           </tr>
           <tr>
             <th scope="row">31</th>
@@ -263,7 +269,7 @@
             <th scope="row">34</th>
             <td>CBD</td>
             <td>Umoja</td>
-            <td>KES 300.00</td>
+            <td>KES 400.00</td>
           </tr>
 
           
