--- a/delivery.html
+++ b/delivery.html
@@ -55,12 +55,12 @@
 
       
     <div class="tutao">
-        <h2 style="margin-bottom: 50px; font-family: dynapuff;">Click on the Whattsapp Heartbeat Icon below to Request a delivery On us</h2>
+        <h2 style="margin-bottom: 50px; font-family: dynapuff;">Click on the Whattsapp Hear-tbeat Icon below to Request a delivery On us</h2>
         <h3>Remember to include:</h3>
-        <h3>pick-up location</h3>
-        <h3>Drop off Location</h3>
-        <h3>Time schedule</h3>
-        <h5 style="color:red">  NB: location pin si highly advisable</h5>
+        <h3>1).pick-up location</h3>
+        <h3>2).Drop off Location</h3>
+        <h3>3).Time schedule</h3>
+        <h5 style="color:red">  NB: location pin is highly advisable</h5>
         <a href="https://wa.me/254798444602/?text=Hello I would like a delivery done from ...... to ......."> 
             <i class="fa-brands fa-whatsapp fa-beat-fade fa-2xl" style="color: #268e25; text-align: center; margin:20px;"></i></a>
       
