--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/8054510657.js" crossorigin="anonymous"></script>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Aldrich&family=Offside&family=Special+Elite&family=Tourney:ital,wght@0,100..900;1,100..900&family=Tulpen+One&display=swap');
     </style>
 
   <!--bootstrap css-->
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Cordwainer corporate Delivery</a>
+          <a style="font-family: Tourney; font-weight: 700;" class="navbar-brand" href="index.html">Cordwainer corporate Delivery</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -60,8 +60,8 @@
 </nav>
 
     <!-- Table Section -->
-    <table class="table" id="dataTable">
-        <thead>
+    <table class=" table table-hover table-striped" id="dataTable">
+        <thead class=" ">
             <tr>
               <th scope="col">Route Number</th>
               <th scope="col">From</th>
