--- a/delivery.html
+++ b/delivery.html
@@ -7,17 +7,21 @@
     <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/8054510657.js" crossorigin="anonymous"></script>
 
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Aldrich&family=Offside&family=Special+Elite&family=Tourney:ital,wght@0,100..900;1,100..900&family=Tulpen+One&display=swap');
+    </style>
+
     <!--bootstrap css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Cordwainer</title>
     <link rel="icon" type="images/x-icon" href="favicon.ico">
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Cordwainer corporate Delivery</a>
+          <a style="font-family: Tourney; font-weight: 700;" class="navbar-brand" href="index.html">Cordwainer corporate Delivery</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -55,11 +59,11 @@
 
       
     <div class="tutao">
-        <h2 style="margin-bottom: 50px; font-family: dynapuff;">Click on the Whattsapp Hear-tbeat Icon below to Request a delivery On us</h2>
-        <h3>Remember to include:</h3>
-        <h3>1).pick-up location</h3>
-        <h3>2).Drop off Location</h3>
-        <h3>3).Time schedule</h3>
+        <h2 style="margin-bottom: 50px; color: rebeccapurple; font-family: dynapuff;">Click on the Whattsapp Hear-tbeat Icon below to Request a delivery On us</h2>
+        <h3 >Remember to include:</h3>
+        <h3 style="font-family: dynapuff;">1).pick-up location</h3>
+        <h3 style="font-family: dynapuff;">2).Drop off Location</h3>
+        <h3 style="font-family: dynapuff;">3).Time schedule</h3>
         <h5 style="color:red">  NB: location pin is highly advisable</h5>
         <a href="https://wa.me/254798444602/?text=Hello I would like a delivery done from ...... to ......."> 
             <i class="fa-brands fa-whatsapp fa-beat-fade fa-2xl" style="color: #268e25; text-align: center; margin:20px;"></i></a>
