--- a/feedback.html
+++ b/feedback.html
@@ -3,9 +3,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Aldrich&family=Offside&family=Special+Elite&family=Tourney:ital,wght@0,100..900;1,100..900&family=Tulpen+One&display=swap');
+      </style>
+
     <!--bootstrap css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Cordwainer</title>
     <link rel="icon" type="images/x-icon" href="favicon.ico">
 
@@ -14,9 +19,9 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Cordwainer corporate Delivery</a>
+          <a style="font-family: Tourney; font-weight: 700;" class="navbar-brand" href="index.html">Cordwainer corporate Delivery</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,7 +37,7 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   More
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="mina dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="delivery.html">Request a delivery</a></li>
                   <li><a class="dropdown-item" href="index.html">Pricing</a></li>
                   <li><a class="dropdown-item" href="feedback.html">Feedback</a></li>
