--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
                 <td></td>
                 <td>CBD</td>
                 <td>Kilimani</td>
-                <td>KES 300.00</td>
+                <td>KES 400.00</td>
               </tr>
               <tr>
                 <td></td>
                 <td>CBD</td>
                 <td>Karen Centre</td>
-                <td>KES 500.00</td>
+                <td>KES 800.00</td>
               </tr>
               <tr>
                 <td></td>
@@ -170,7 +170,7 @@
                 <td></td>
                 <td>CBD</td>
                 <td>Lang'ata</td>
-                <td>KES 300.00</td>
+                <td>KES 400.00</td>
               </tr>
               <tr>
                 <td></td>
@@ -200,8 +200,8 @@
             <tr>
               <td></td>
               <td>CBD</td>
-              <td>Ngong</td>
-              <td>KES 850.00</td>
+              <td>Ngong town</td>
+              <td>KES 1000.00</td>
             </tr>
             <tr>
                 <td></td>
@@ -213,13 +213,13 @@
               <td></td>
               <td>CBD</td>
               <td>Past Trm-Ruiru</td>
-              <td>KES 500.00</td>
+              <td>KES 650.00</td>
             </tr>
             <tr>
               <td></td>
               <td>CBD</td>
               <td>Past Karen-Rongai</td>
-              <td>KES 850.00</td>
+              <td>KES 900.00</td>
             </tr>
             <tr>
               <td></td>
@@ -231,7 +231,7 @@
               <td></td>
               <td>CBD</td>
               <td>Syokimau</td>
-              <td>KES 600.00</td>
+              <td>KES 800.00</td>
             </tr>
             <tr>
               <td></td>
@@ -255,7 +255,7 @@
               <td></td>
               <td>CBD</td>
               <td>Westlands/Parklands</td>
-              <td>KES 300.00</td>
+              <td>KES 350.00</td>
             </tr>       
             <tr>
               <td></td>
@@ -286,3 +286,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
