--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
               <td>Buruburu</td>
               <td>KES 350.00</td>
             </tr>
+             <tr>
+                <td></td>
+                <td>CBD</td>
+                <td>Baba dogo/Lucky summer</td>
+                <td>KES 400.00</td>
+            </tr>
             <tr>
                <td></td>
                <td >CBD</td>
@@ -98,7 +104,7 @@
                 <td></td>
                 <td>CBD</td>
                 <td>Eastleigh</td>
-                <td>KES 300.00</td>
+                <td>KES 350.00</td>
               </tr>
              <tr>
               <td></td>
@@ -116,7 +122,19 @@
               <td></td>
               <td>CBD</td>
               <td>Galleria</td>
-              <td>KES 500.00</td>
+              <td>KES 650.00</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>CBD</td>
+              <td>Garden city</td>
+              <td>KES 400.00</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>CBD</td>
+                <td>Highridge</td>
+                <td>KES 400.00</td>
             </tr>
             <tr>
               <td></td>
@@ -137,10 +155,22 @@
                 <td>KES 1000.00</td>
             </tr>
             <tr>
+                <td></td>
+                <td>CBD</td>
+                <td>kawangware</td>
+                <td>KES 500.00</td>
+            </tr>
+            <tr>
               <td></td>
               <td>CBD</td>
               <td>Kiambu</td>
-              <td>KES 500.00</td>
+              <td>KES 650.00</td>
+            </tr>
+              <tr>
+                <td></td>
+                <td>CBD</td>
+                <td>kinoo</td>
+                <td>KES 700.00</td>
             </tr>
             <tr>
               <td></td>
@@ -181,8 +211,26 @@
             <tr>
               <td></td>
               <td>CBD</td>
+              <td>Muthaiga</td>
+              <td>KES 500.00</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>CBD</td>
+              <td>Muthaiga North</td>
+              <td>KES 600.00</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>CBD</td>
               <td>Mlolongo</td>
               <td>KES 600.00</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>CBD</td>
+                <td>Naivasha road</td>
+                <td>KES 600.00</td>
             </tr>
             <tr>
                 <td></td>
@@ -202,6 +250,12 @@
               <td>CBD</td>
               <td>Ngong town</td>
               <td>KES 1000.00</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>CBD</td>
+              <td>Ngumba</td>
+              <td>KES 400.00</td>
             </tr>
             <tr>
                 <td></td>
@@ -242,6 +296,12 @@
             <tr>
               <td></td>
               <td>CBD</td>
+              <td>Thome</td>
+              <td>KES 500.00</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>CBD</td>
               <td>Utawala</td>
               <td>KES 700.00</td>
             </tr>
@@ -256,18 +316,36 @@
               <td>CBD</td>
               <td>Westlands/Parklands</td>
               <td>KES 350.00</td>
-            </tr>       
+            </tr> 
+              <tr>
+                <td></td>
+                <td>CBD</td>
+                <td>village market</td>
+                <td>KES 500.00</td>
+            </tr>
             <tr>
               <td></td>
               <td>CBD</td>
               <td>South B</td>
-              <td>KES 300.00</td>
+              <td>KES 350.00</td>
             </tr>
             <tr>
               <td></td>
               <td>CBD</td>
               <td>South C</td>
-              <td>KES 300.00</td>
+              <td>KES 350.00</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>CBD</td>
+              <td>USIU</td>
+              <td>KES 400.00</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>CBD</td>
+                <td>Uthiru 87</td>
+                <td>KES 700.00</td>
             </tr>
             <tr>
               <td></td>
@@ -286,4 +364,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
