--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <!--bootstrap css-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
-  <title>Cordwainer</title>
+  <title>Cordwainer Errands</title>
   <link rel="icon" type="images/x-icon" href="favicon.ico">
 </head>
 
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
-          <a style="font-family: Tourney; font-weight: 700;" class="navbar-brand" href="index.html">Cordwainer corporate Delivery</a>
+          <a style="font-family: Tourney; font-weight: 700;" class="navbar-brand" href="index.html">Cordwainer Errands</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -45,6 +45,8 @@
                   <li><a class="dropdown-item" href="#">share</a></li>
                 </ul>
               </li>
+
+                <button class="btn bg-success" type="submit">Pay Account = 40106</button>
               <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
               </li> -->
@@ -364,5 +366,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
