--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </ul>
               </li>
 
-                <button class="btn bg-success" type="submit">Pay Account = 40106</button>
+                <a button class="btn bg-success" type="submit" href=" https://www.imbankgroup.com/ke/mpesa-xpress/ " >Pay Account = 40106</button>
               <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
               </li> -->
@@ -366,6 +366,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
