--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="https://wa.me/254798444602">Contact us</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true">
                   More
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -46,7 +46,7 @@
                 </ul>
               </li>
 
-               <a href="https://www.imbankgroup.com/ke/mpesa-xpress/"> <button class="btn bg-success" type="submit" style="font-family: Tourney; font-weight: 750;">  click to Pay Account = 40106 </button></a>
+               <a href="https://www.imbankgroup.com/ke/mpesa-xpress/"> <button class="btn bg-success text-danger" type="submit" style="font-family: Tourney; font-weight: 750;">  click to Pay Account = 40106 </button></a>
               <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
               </li> -->
@@ -366,6 +366,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
