--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
           <a style="font-family: Tourney; font-weight: 700;" class="navbar-brand" href="index.html">Cordwainer Errands</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="show" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -46,7 +46,7 @@
                 </ul>
               </li>
 
-               <a href="https://www.imbankgroup.com/ke/mpesa-xpress/"> <button class="btn bg-success text-danger" type="submit" style="font-family: Tourney; font-weight: 750;">  click to Pay Account = 40106 </button></a>
+               <a href="https://www.imbankgroup.com/ke/mpesa-xpress/"> <button class="btn bg-success text-white" type="submit" style="font-family: Tourney; font-weight: 750;">  click to Pay Account = 40106 </button></a>
               <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
               </li> -->
@@ -366,6 +366,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
