--- a/index.html
+++ b/index.html
@@ -157,6 +157,24 @@
                 <td>KES 1000.00</td>
             </tr>
             <tr>
+              <td></td>
+              <td>CBD</td>
+              <td>Kasarani-Seasons</td>
+              <td>KES 400.00</td>
+            </tr>
+              <tr>
+              <td></td>
+              <td>CBD</td>
+              <td>Kasarani-hunters</td>
+              <td>KES 500.00</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>CBD</td>
+              <td>Kasarani-Mwiki</td>
+              <td>KES 650.00</td>
+            </tr>
+            <tr>
                 <td></td>
                 <td>CBD</td>
                 <td>kawangware</td>
@@ -286,6 +304,12 @@
             <tr>
               <td></td>
               <td>CBD</td>
+              <td>Ruai</td>
+              <td>KES 800.00</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>CBD</td>
               <td>Syokimau</td>
               <td>KES 800.00</td>
             </tr>
@@ -322,7 +346,7 @@
               <tr>
                 <td></td>
                 <td>CBD</td>
-                <td>village market</td>
+                <td>Village market</td>
                 <td>KES 500.00</td>
             </tr>
             <tr>
@@ -366,6 +390,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
